--- a/templates/forecast.tmpl
+++ b/templates/forecast.tmpl
@@ -33,7 +33,7 @@
             <span class="TempSel">{{ w.temperature }}</span> <br />
         </div>
         <div style="flex-grow: 1;align-self: center;align-content: center; text-align: center;">
-            <img src='{{ w.imgSrc }}' class="igmWeatherCurrentIcon"><br>{{ w.description }}
+            <img src='{{ w.imgSrc }}' class="igmWeatherForecastIcon"><br>{{ w.description }}
         </div>
     </div>
 {% endfor %}
